# clegs_sim

clegs_gazebo/: CMakeLists.txt  package.xml
clegs_gazebo/launch/: clegs_gazebo.launch
clegs_gazebo/worlds/: empty_world.world  slopes.world  stairs.world  uneven_terrain.world
clegs_gazebo/worlds/meshes/: escalera.stl  rampa10.dae  rampa15.dae  rampa20.dae  rampa25.dae  rampa30.dae  rampa35.dae  rampa40.dae  rampa45.dae  rampa50.dae  rugoso.stl
clegs_sim/: CMakeLists.txt  package.xml
clegs_sim_control/: CMakeLists.txt  package.xml
clegs_sim_control/src/: sim_control_interface.cpp
clegs_sim_controllers/: CMakeLists.txt  package.xml
clegs_sim_controllers/config/: clhero_v2.yaml  octo.yaml  quad.yaml
clegs_sim_controllers/launch/: clhero_v2_control.launch  octo_control.launch  quad_control.launch
